...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Lunch-->
        <scene sceneID="nvJ-qF-gnp">
            <objects>
                <viewControllerPlaceholder storyboardName="Lunch" id="Pk0-Ro-UPV" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Lunch" image="tab_lunch" id="CHe-Id-6BG"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6WL-AS-72f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="299" y="115"/>
        </scene>
...
            </objects>
            <point key="canvasLocation" x="551" y="-301"/>
        </scene>
        <!--Internets-->
        <scene sceneID="AMl-bH-WJH">
            <objects>
                <viewControllerPlaceholder storyboardName="Internets" id="Ws1-pE-Otz" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="internets" image="tab_internets" id="G9C-aE-OYB"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zhh-OW-Nwa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="788" y="115"/>
        </scene>
...
