...
// MARK: - Local Constants

extension RestaurantDetailsViewController {
    
    private enum LocalConstants {
        enum Strings {
            static let vcTitle = "Details".localized()
        }
        enum Numbers {
            static let numberOfCells = 3
        }
        enum CellHeight {
            static let mapCellHeight: CGFloat = 180
...
