...
// MARK: - Local Constants

extension LunchViewController {
    
    private enum LocalConstants {
        enum Strings {
            static let vcTitle = "Lunch Time".localized()
        }
        enum ErrorMessages {
            static let noInternetConnectionTitle = "There's no internet connection!".localized()
            static let noInternetConnectionMessage = "Check your internet connection and try again.".localized()
            static let urlFailureTitle = "Oooops!".localized()
            static let urlFailureMessage = "Something wrong happened, please try again.".localized()
...
