...
                                            <rect key="frame" x="0.0" y="0.0" width="267" height="192"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lzH-Ub-vhR" customClass="CachedImageView" customModule="BRChallenge" customModuleProvider="target">
                                                    <rect key="frame" x="0.0" y="0.0" width="267" height="192"/>
                                                </imageView>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cellGradientBackground" translatesAutoresizingMaskIntoConstraints="NO" id="P6E-kn-9GZ">
                                                    <rect key="frame" x="0.0" y="0.0" width="267" height="193"/>
                                                </imageView>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQ9-NC-U7a" customClass="RestaurantInfoContainerView" customModule="BRChallenge" customModuleProvider="target">
                                                    <rect key="frame" x="0.0" y="132" width="267" height="60"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <constraints>
...
